--- a/app/boards/shields/mano42/mano42.dtsi
+++ b/app/boards/shields/mano42/mano42.dtsi
@@ -34,7 +34,7 @@ RC(2,5) RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(4,9) RC(4,8)     RC(3,4) RC(4,4) RC(2
         compatible = "zmk,kscan-gpio-matrix";
         label = "KSCAN";
 
-        diode-direction = "col2row";
+        diode-direction = "row2col";
         row-gpios
             = <&pro_micro 5 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
             , <&pro_micro 6 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
